<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.adelnor.adeladmin.ui.fragments.property.PropertyFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_property" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.adelnor.adeladmin.ui.fragments.plant.PlantFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_plant" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.adelnor.adeladmin.ui.fragments.dispatch.DispatchFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_dispatch" />

    <fragment
        android:id="@+id/navigation_distribution"
        android:name="com.adelnor.adeladmin.ui.fragments.distribution.DistributionFragment"
        android:label="@string/title_distribution"
        tools:layout="@layout/fragment_distribution" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.adelnor.adeladmin.ui.fragments.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>