<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_scan_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:drawableLeft="@drawable/ic_qr_code"
        android:drawableTint="@color/colorPrimary"
        android:ems="10"
        android:fontFamily="@font/sourcesanspro"
        android:hint="@string/hint_scan_read"
        android:inputType="textPersonName"
        android:paddingLeft="6dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/sourcesanspro"
        android:text="@string/hint_capture_content"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:id="@+id/textView28"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/sourcesanspro"
            android:text="@string/hint_codqr"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/sourcesanspro"
            android:text="@string/hint_address"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/sourcesanspro"
            android:text="@string/hint_codprod"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/sourcesanspro"
            android:text="@string/hint_description"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_capture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

</LinearLayout>