<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro"
            android:padding="6dp"
            android:text="@string/hint_branch"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_branch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="6dp"
            android:text="TextView"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro"
            android:padding="6dp"
            android:text="@string/hint_warehouse"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_warehouses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <EditText
        android:id="@+id/edit_invoice_folio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_invoice_folio"
        android:inputType="number"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:fontFamily="@font/sourcesanspro"
        android:text="@string/hint_customer_info"
        android:textColor="@color/appGreen2"
        android:textSize="12sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView36"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro"
            android:text="@string/hint_customer"
            android:textAlignment="textEnd"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/sourcesanspro"
            android:text="NOMBRE CLIENTE"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView38"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro"
            android:text="@string/hint_rfc"
            android:textAlignment="textEnd"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_rfc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/sourcesanspro"
            android:text="RFC"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>