<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro"
            android:padding="6dp"
            android:text="@string/hint_branch"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_branch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="6dp"
            android:text="TextView"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro"
            android:padding="6dp"
            android:text="@string/hint_warehouse"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_warehouses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro"
            android:padding="6dp"
            android:text="@string/hint_codqr"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_providers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <EditText
        android:id="@+id/edit_scan_purchase_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:drawableTint="@color/colorPrimary"
        android:ems="10"
        android:enabled="true"
        android:fontFamily="@font/sourcesanspro"
        android:hint="@string/hint_fol_ent"
        android:inputType="textPersonName"
        android:paddingLeft="6dp"
        android:textSize="16sp" />

</LinearLayout>